@@ -18,15 +18,14 @@
 package org.apache.ignite.internal.configuration.notifications;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.Future;
 import org.apache.ignite.configuration.annotation.Config;
 import org.apache.ignite.configuration.annotation.ConfigValue;
 import org.apache.ignite.configuration.annotation.ConfigurationRoot;
-import org.apache.ignite.configuration.annotation.ConfigurationType;
 import org.apache.ignite.configuration.annotation.NamedConfigValue;
 import org.apache.ignite.configuration.annotation.Value;
 import org.apache.ignite.configuration.notifications.ConfigurationNamedListListener;
@@ -35,11 +34,11 @@ import org.apache.ignite.internal.configuration.ConfigurationRegistry;
 import org.apache.ignite.internal.configuration.storage.TestConfigurationStorage;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.apache.ignite.configuration.annotation.ConfigurationType.LOCAL;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -49,7 +48,7 @@ import static org.junit.jupiter.api.Assertions.fail;
 /** */
 public class ConfigurationListenerTest {
     /** */
-    @ConfigurationRoot(rootName = "parent", type = ConfigurationType.LOCAL)
+    @ConfigurationRoot(rootName = "parent", type = LOCAL)
     public static class ParentConfigurationSchema {
         /** */
         @ConfigValue
@@ -77,17 +76,13 @@ public class ConfigurationListenerTest {
     /** */
     @BeforeEach
     public void before() {
-        var testConfigurationStorage = new TestConfigurationStorage(ConfigurationType.LOCAL);
+        var testConfigurationStorage = new TestConfigurationStorage(LOCAL);
 
-        registry = new ConfigurationRegistry(
-            Collections.singletonList(ParentConfiguration.KEY),
-            Collections.emptyMap(),
-            Collections.singletonList(testConfigurationStorage)
-        );
+        registry = new ConfigurationRegistry(List.of(ParentConfiguration.KEY), Map.of(), testConfigurationStorage);
 
         registry.start();
 
-        registry.startStorageConfigurations(testConfigurationStorage.type());
+        registry.initializeDefaults();
 
         configuration = registry.getConfiguration(ParentConfiguration.KEY);
     }
@@ -141,7 +136,9 @@ public class ConfigurationListenerTest {
         assertEquals(List.of("parent", "child", "str"), log);
     }
 
-    /** Tests notifications validity when a new named list element is created. */
+    /**
+     * Tests notifications validity when a new named list element is created.
+     */
     @Test
     public void namedListNodeOnCreate() throws Exception {
         List<String> log = new ArrayList<>();
@@ -171,7 +168,7 @@ public class ConfigurationListenerTest {
             return completedFuture(null);
         });
 
-        configuration.elements().listen(new ConfigurationNamedListListener<ChildView>() {
+        configuration.elements().listenElements(new ConfigurationNamedListListener<ChildView>() {
             /** {@inheritDoc} */
             @Override public CompletableFuture<?> onCreate(ConfigurationNotificationEvent<ChildView> ctx) {
                 assertNull(ctx.oldValue());
@@ -219,7 +216,9 @@ public class ConfigurationListenerTest {
         assertEquals(List.of("parent", "elements", "create"), log);
     }
 
-    /** Tests notifications validity when a named list element is edited. */
+    /**
+     * Tests notifications validity when a named list element is edited.
+     */
     @Test
     public void namedListNodeOnUpdate() throws Exception {
         configuration.change(parent ->
@@ -257,7 +256,7 @@ public class ConfigurationListenerTest {
             return completedFuture(null);
         });
 
-        configuration.elements().listen(new ConfigurationNamedListListener<ChildView>() {
+        configuration.elements().listenElements(new ConfigurationNamedListListener<ChildView>() {
             /** {@inheritDoc} */
             @Override public CompletableFuture<?> onCreate(ConfigurationNotificationEvent<ChildView> ctx) {
                 log.add("create");
@@ -308,8 +307,9 @@ public class ConfigurationListenerTest {
         assertEquals(List.of("parent", "elements", "update"), log);
     }
 
-
-    /** Tests notifications validity when a named list element is renamed. */
+    /**
+     * Tests notifications validity when a named list element is renamed.
+     */
     @Test
     public void namedListNodeOnRename() throws Exception {
         configuration.change(parent ->
@@ -342,9 +342,6 @@ public class ConfigurationListenerTest {
 
             ChildView newValue = ctx.newValue().get("newName");
 
-            assertNotNull(newValue, ctx.newValue().namedListKeys().toString());
-            assertEquals("default", newValue.str());
-
             assertSame(oldValue, newValue);
 
             log.add("elements");
@@ -352,7 +349,103 @@ public class ConfigurationListenerTest {
             return completedFuture(null);
         });
 
-        configuration.elements().listen(new ConfigurationNamedListListener<ChildView>() {
+        configuration.elements().listenElements(new ConfigurationNamedListListener<ChildView>() {
+            /** {@inheritDoc} */
+            @Override public CompletableFuture<?> onCreate(ConfigurationNotificationEvent<ChildView> ctx) {
+                log.add("create");
+
+                return completedFuture(null);
+            }
+
+            /** {@inheritDoc} */
+            @Override public CompletableFuture<?> onUpdate(ConfigurationNotificationEvent<ChildView> ctx) {
+                log.add("update");
+
+                return completedFuture(null);
+            }
+
+            /** {@inheritDoc} */
+            @Override public CompletableFuture<?> onRename(
+                String oldName,
+                String newName,
+                ConfigurationNotificationEvent<ChildView> ctx
+            ) {
+                assertEquals("name", oldName);
+                assertEquals("newName", newName);
+
+                ChildView oldValue = ctx.oldValue();
+
+                assertNotNull(oldValue);
+                assertEquals("default", oldValue.str());
+
+                ChildView newValue = ctx.newValue();
+
+                assertSame(oldValue, newValue);
+
+                log.add("rename");
+
+                return completedFuture(null);
+            }
+
+            /** {@inheritDoc} */
+            @Override public CompletableFuture<?> onDelete(ConfigurationNotificationEvent<ChildView> ctx) {
+                log.add("delete");
+
+                return completedFuture(null);
+            }
+        });
+
+        configuration.change(parent ->
+            parent.changeElements(elements -> elements.rename("name", "newName"))
+        ).get(1, SECONDS);
+
+        assertEquals(List.of("parent", "elements", "rename"), log);
+    }
+
+    /**
+     * Tests notifications validity when a named list element is renamed and updated at the same time.
+     */
+    @Test
+    public void namedListNodeOnRenameAndUpdate() throws Exception {
+        configuration.change(parent ->
+            parent.changeElements(elements -> elements.create("name", element -> {}))
+        ).get(1, SECONDS);
+
+        List<String> log = new ArrayList<>();
+
+        configuration.listen(ctx -> {
+            log.add("parent");
+
+            return completedFuture(null);
+        });
+
+        configuration.child().listen(ctx -> {
+            log.add("child");
+
+            return completedFuture(null);
+        });
+
+        configuration.elements().listen(ctx -> {
+            assertEquals(1, ctx.oldValue().size());
+
+            ChildView oldValue = ctx.oldValue().get("name");
+
+            assertNotNull(oldValue);
+            assertEquals("default", oldValue.str());
+
+            assertEquals(1, ctx.newValue().size());
+
+            ChildView newValue = ctx.newValue().get("newName");
+
+            assertNotNull(newValue, ctx.newValue().namedListKeys().toString());
+            assertEquals("foo", newValue.str());
+
+            log.add("elements");
+
+            return completedFuture(null);
+        });
+
+        configuration.elements().listenElements(new ConfigurationNamedListListener<ChildView>() {
             /** {@inheritDoc} */
             @Override public CompletableFuture<?> onCreate(ConfigurationNotificationEvent<ChildView> ctx) {
                 log.add("create");
@@ -384,9 +477,7 @@ public class ConfigurationListenerTest {
                 ChildView newValue = ctx.newValue();
 
                 assertNotNull(newValue);
-                assertEquals("default", newValue.str());
-
-                assertSame(oldValue, newValue);
+                assertEquals("foo", newValue.str());
 
                 log.add("rename");
 
@@ -402,13 +493,18 @@ public class ConfigurationListenerTest {
         });
 
         configuration.change(parent ->
-            parent.changeElements(elements -> elements.rename("name", "newName"))
+            parent.changeElements(elements -> elements
+                .rename("name", "newName")
+                .createOrUpdate("newName", element -> element.changeStr("foo"))
+            )
         ).get(1, SECONDS);
 
         assertEquals(List.of("parent", "elements", "rename"), log);
     }
 
-    /** Tests notifications validity when a named list element is deleted. */
+    /**
+     * Tests notifications validity when a named list element is deleted.
+     */
     @Test
     public void namedListNodeOnDelete() throws Exception {
         configuration.change(parent ->
@@ -442,7 +538,7 @@ public class ConfigurationListenerTest {
             return completedFuture(null);
         });
 
-        configuration.elements().listen(new ConfigurationNamedListListener<ChildView>() {
+        configuration.elements().listenElements(new ConfigurationNamedListListener<ChildView>() {
             /** {@inheritDoc} */
             @Override public CompletableFuture<?> onCreate(ConfigurationNotificationEvent<ChildView> ctx) {
                 log.add("create");
@@ -494,9 +590,10 @@ public class ConfigurationListenerTest {
         assertEquals(List.of("parent", "elements", "delete"), log);
     }
 
-    /** */
+    /**
+     * Tests that concurrent configuration access does not affect configuration listeners.
+     */
     @Test
-    @Disabled("Will be fixed in https://issues.apache.org/jira/browse/IGNITE-15193")
     public void dataRace() throws Exception {
         configuration.change(parent -> parent.changeElements(elements ->
             elements.create("name", e -> {}))
